# test_self

DLL_Linux/code/: main.c  test.c  test.h  test_d.out
cf/23.10.28Codeforces Round 906 (Div. 2)/: A  A.c  B  B.c  C.c
key/: Github_token  token_9.3
markdown/: README.md
pcd/: CMakeLists.txt  pcd.cpp  pcd_print.cpp  print.cpp
pcd/samples/CADC/extreme/: 15.pcd  15.txt  25.pcd  25.txt  35.pcd  35.txt  45.pcd  45.txt  5.pcd  5.txt  55.pcd  55.txt  65.pcd  65.txt  75.pcd  75.txt  85.pcd  85.txt  95.pcd  95.txt
pcd/samples/CADC/heavy/18.3.7/: 16.pcd  16.txt  26.pcd  26.txt  36.pcd  36.txt  46.pcd  46.txt  6.pcd  6.txt
pcd/samples/CADC/heavy/19.2.27/: 10.pcd  10.txt  30.pcd  30.txt  50.pcd  50.txt  70.pcd  70.txt  90.pcd  90.txt
pcd/samples/CADC/light/18.3.7/: 14.pcd  14.txt  34.pcd  34.txt  54.pcd  54.txt  74.pcd  74.txt  94.pcd  94.txt
pcd/samples/CADC/light/19.2.27/: 17.pcd  17.txt  3.pcd  3.txt  31.pcd  31.txt  45.pcd  45.txt  59.pcd  59.txt
pcd/samples/CADC/medium/18.3.6/: 26.pcd  26.txt  46.pcd  46.txt  6.pcd  6.txt  66.pcd  66.txt  86.pcd  86.txt
pcd/samples/CADC/medium/19.2.27/: 23.pcd  23.txt  3.pcd  3.txt  43.pcd  43.txt  63.pcd  63.txt  83.pcd  83.txt
pcd/samples/wuhan/: 10.pcd  10.txt  115.pcd  115.txt  136.pcd  136.txt  157.pcd  157.txt  178.pcd  178.txt  199.pcd  199.txt  220.pcd  220.txt  241.pcd  241.txt  262.pcd  262.txt  283.pcd  283.txt  304.pcd  304.txt  31.pcd  31.txt  325.pcd  325.txt  346.pcd  346.txt  367.pcd  367.txt  388.pcd  388.txt  409.pcd  409.txt  430.pcd  430.txt  451.pcd  451.txt  472.pcd  472.txt  (+10 more)
ros_test/devel/: .catkin  (+1 more)
(+246 files in other folders)
